# classinet

./: .gitignore  CMakeLists.txt  README.md
api/: classinet_client_c_api.h  classinet_client_cpp_api.h
command-line-app/src/: LinuxSpecific.cpp  LinuxSpecific.h  main_classinet_app.cpp
